--- a/login.html
+++ b/login.html
@@ -51,6 +51,12 @@ text-align: center;
 <input type="password" id="password" name="password" required>
 <label for="phone number>Phone Number</label>
 <input type="tel" id="phone number" name="phone number" required>
+<label>Gender</label>
+<select>
+<option>Male</option>
+<option>Female</option>
+<option>Others</option>
+</select>
 <label for="Event">Choose Event</label>
 <option value="coding">Coding</option>
 <option value="debate">Debate</option>
